exports[`test Online indicator renders correctly when system is offline 1`] = `
<div
  className="blabbr-status-indicator offline"
  data-for="blabbr-indicator-tooltip"
  data-tip={true}>
  <wrapper
    className="__react_component_tooltip place-top type-dark "
    data-id="tooltip">
    
  </wrapper>
</div>
`;

exports[`test Online indicator renders correctly when system is online 1`] = `
<div
  className="blabbr-status-indicator online"
  data-for="blabbr-indicator-tooltip"
  data-tip={true}>
  <wrapper
    className="__react_component_tooltip place-top type-dark "
    data-id="tooltip">
    
  </wrapper>
</div>
`;
